# sik

./: Cargo.toml  README.md
.github/workflows/: cargo-publish.yml  rust.yml
src/: lib.rs  main.rs
src/cli/: args.rs
src/colors/: painter.rs
src/errors/: custom_errors.rs  mod.rs
src/output/: printer.rs
src/schemas/: files.rs
src/walker/: walker.rs
src/worker/: worker.rs
