[package]
name = "sik"
version = "0.1.5"
edition = "2024"
description = "A fast and concurrent command-line tool for searching patterns in files."
license = "AGPL-3.0-or-later"
repository = "https://github.com/mi66mc/sik"
homepage = "https://github.com/mi66mc/sik"
readme = "README.md"
keywords = ["cli", "search", "grep", "multithreaded", "rust"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
regex = "1.12.2"
